text alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -147,22 +147,23 @@ article ul li , #Contact .row ul li{
 	padding: 0.5em;
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
+	flex-wrap: wrap; 	
 }
 
 #toolBox ul li{
-	width: 20%;
+	width: 15%;
+	max-height: 20%;
 	margin: 5%;
 	color: black;
 	flex-direction: column;
 	text-align: center;
+	align-items: center
 }
 
 #toolBox ul li img {
-	width: 60%;
+	width: 100%;
 	margin: 0;
 }
-
 
 #Contact .row img {
     border-radius: 50%;
